--- a/notebooks/tournament_results.ipynb
+++ b/notebooks/tournament_results.ipynb
@@ -10,13 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
    "id": "f993341d-d362-4ad9-bc2d-109274424004",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "source": [
     "import subprocess"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -63,7 +67,7 @@
    "source": [
     "results = subprocess.run(\n",
     "    [bayes_elo], \n",
-    "    input=bayeselo_commands_without_anchor, \n",
+    "    input=bayeselo_commands, \n",
     "    text=True,  \n",
     "    capture_output=True\n",
     ")"
